ændringer efter validering nr. 1

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <label for="toggle">&#9776;</label>
 
         <!-- Tilføjer billeder til nav.-baren og angiver tekst til skærmlæsere -->
-        <img id="dplogo" src="img/dplogo.png" at="Dahl Pedersen logo">
+        <img id="dplogo" src="img/dplogo.png" alt="Dahl Pedersen logo">
         <img id="meddelelse" src="img/besked.png" alt="billede af meddelelsesikon">
         <img id="notifikation" src="img/notifikation.png" alt="billede af notifikationsikon">
     </div>
@@ -57,7 +57,7 @@
         <h2 class="overskrift">MIN GARAGE</h2>
         <p class="centertekst">Tilføj din bil og få dine første point</p>
         <button class="knap" id="tilfojbil">Tilføj bil</button>
-        <div class="bundstyle" id="garagebund"> </div>
+        <div class="bundstyle garagebund"> </div>
     </div>
 
     <!-- Fastslår indholdet i sektion nr. 3 - kalender -->
@@ -66,7 +66,7 @@
         <p class="centertekst">Du har ingen kommende aftaler eller<br>begivenheder i din kalender</p>
         <button class="knap" id="seevents">Se begivenheder</button>
         <button class="knap" id="bookmek">Book værksted</button>
-        <div class="bundstyle" id="garagebund"> </div>
+        <div class="bundstyle garagebund"> </div>
     </div>
 
     <!-- Følgende sektion definerer karrusellen-->
@@ -111,7 +111,7 @@
         <p class="centertekst">Har du spørgsmål eller brug for hjælp<br>så kontakt os her</p>
         <button class="knap" id="meddel">Send meddelelse</button>
         <button class="knap" id="ring">Ring op</button>
-        <div class="bundstyle" id="garagebund"> </div>
+        <div class="bundstyle garagebund"> </div>
     </div>
     
 <!-- Sender brugeren til toppen af siden -->
