rettelser efter validering nr. 2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="nav">
         <!-- Ikon for hamburger-menu -->
-        <label for="toggle">&#9776;</label>
+        <label>&#9776;</label>
 
         <!-- Tilføjer billeder til nav.-baren og angiver tekst til skærmlæsere -->
         <img id="dplogo" src="img/dplogo.png" alt="Dahl Pedersen logo">
@@ -76,19 +76,19 @@
         <div class="slideshow-container">
             <!-- Første billede -->
             <div class="mySlides">
-                <img class="imgbanner" src="img/sprinkler.jpg">
+                <img class="imgbanner" src="img/sprinkler.jpg" alt="sprinklervæske">
                 <div class="tilbudslinje"> Gratis sprinklervæske til alle medlemmer</div>
             </div>
 
             <!-- Andet billede -->
             <div class="mySlides">
-                <img class="imgbanner" src="img/michelin.jpg">
+                <img class="imgbanner" src="img/michelin.jpg" alt="michelin">
                 <div class="tilbudslinje"> 15% rabat på nye sommerdæk fra Michelin</div>
             </div>
 
             <!-- Tredje billede -->
             <div class="mySlides">
-                <img class="imgbanner" src="img/bakkamera.jpg">
+                <img class="imgbanner" src="img/bakkamera.jpg" alt="bakkamera">
                 <div class="tilbudslinje"> Lav pris på eftermonteret bakkamera</div>
             </div>
             <!-- Knappen mod venstre konstrueres -->
