--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!-- Dette er udviklet af multimediedesignstuderende Johanne Vorre fra arhvervsakademi Dania i Skive. Koden er fremstillet i forbindelse med afsluttende hovedopgave sommeren 2019 -->
 
+<!-- Valideret med 0 errors eller warnings d 22. maj 2019 via validator.w3.org-->
+
 <!--Fortæller browseren, at det er et HTML-dokument -->
 <!DOCTYPE html>
 <!--Fortæller at sproget er dansk-->
