Rettelse af typos

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Dette er udviklet af multimediedesignstuderende Johanne Vorre fra arhvervsakademi Dania i Skive. Koden er fremstillet i forbindelse med afsluttende hovedopgave sommeren 2019 -->
+<!-- Dette er udviklet af multimediedesignstuderende Johanne Vorre fra erhvervsakademi Dania i Skive. Koden er fremstillet i forbindelse med afsluttende hovedopgave sommeren 2019 -->
 
 <!-- Valideret med 0 errors eller warnings d 22. maj 2019 via validator.w3.org-->
 
@@ -72,7 +72,7 @@
     </div>
 
     <!-- Følgende sektion definerer karrusellen-->
-    <div class="" id="nyheder">
+    <div id="nyheder">
         <h2 class="overskrift">NYHEDER</h2>
         <!-- Her starter selve karrusellen -->
         <div class="slideshow-container">
@@ -121,6 +121,7 @@
         <a href="#dplogo">&#x2227;<br></a>
         <a href="#dplogo">Til toppen</a>
     </div>
+    
     <!-- Der linkes til JavaScript-dokumentet -->
     <script src="karrusel.js"></script>
 </body></html>
